--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Word Counter Tool</title>
-    <link rel="stylesheet" href="styles.css">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="website icon" type="png" href="./pictures/logo.png">
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
+    <title>Word Counter</title>
 </head>
 
 <body>
@@ -25,8 +29,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
 
+    </div>
 </body>
 
 </html>
